<resources>
    <string name="app_name">JAL SAHAY FINAL</string>
    <string name="registered">Registered</string>
    <string name="solved">Solved</string>
    <string name="pending">Pending</string>
    <string name="cancelled">Cancelled</string>
    <string name="categories">Categories</string>
    <string name="floods">Floods</string>
    <string name="potholes">Potholes</string>
    <string name="pipeline">Pipeline</string>
    <string name="drainage">Drainage</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="camera">Report</string>
    <string name="profile">Profile</string>
    <string name="jal_sahay">JAL SAHAY</string>
    <string name="about">About</string>
    <string name="resolved">Resolved</string>
    <string name="feedback_form">Feedback Form</string>
    <string name="enter_feedback_">Enter your feedback here</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="login_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_name">Enter your name here</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="help_and_support">Help And Support</string>
    <string name="change_password">Change Password</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account"><a href="">Don\'t have an account?</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">"Change Language "</string>
    <string name="help">Help</string>
    <string name="complaints">Complaints</string>
    <string name="report_problem">Report Problem</string>

    <string name="google_map_api_key">AIzaSyDGbUWydl_Q_3jUKgdPA-MfNEKq-KLwn2g</string>
    <string name="OpenDrawer">Open Drawer</string>
    <string name="CloseDrawer">Close Drawer</string>
    <string name="user_profile">Your Profile</string>
    <string name="signup">Sign Up</string>
    <string name="raise_complaint">Raise a Complaint</string>
    <string name="location">Location</string>
    <string name="description">Problem Description (if Any):</string>

</resources>