<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@drawable/bluebackground"
    tools:context=".LoginActivity">

    <!-- App Logo Centered -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/disastermanagement"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:importantForAccessibility="no" />

    <!-- App Name in Bold -->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jal_sahay"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_below="@+id/appLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <!-- Login Prompt -->
    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account"
        android:textSize="24sp"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

    <!-- Email Login Edit Text -->

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/txtLogin"
        android:layout_marginTop="8dp"/>


    <!-- Password Login Edit Text-->


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="8dp"/>


    <!-- Other Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp" />

</RelativeLayout>
