<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".Activity.FeedbackForm">

    <!-- Feedback Form Heading -->
    <TextView
        android:id="@+id/feedbackHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_form"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <!-- Feedback EditText Box -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedbackHeading"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/editTextFeedback"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/enter_feedback_"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:gravity="top"
            android:autofillHints="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Ratings (Place your rating views here) -->

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputFeedback"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <!-- Submit Feedback Button -->
    <Button
        android:id="@+id/btnSubmitFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback"
        android:backgroundTint="@color/black"
        android:layout_below="@+id/ratingBar"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>
