<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start"
    android:background="@color/white"
    tools:context=".Activity.ReportActivity">

    <include layout="@layout/toolbar_layout" />


    <TextView
        android:id="@+id/raiseComplaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raise_complaint"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="80dp" />

    <!-- Camera Button -->
    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/camera"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:layout_below="@id/raiseComplaint"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="90dp"/>

    <TextView
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/cameraButton"
        android:layout_marginStart="8dp"
        android:text="@string/report_problem"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="140dp"/>

    <ImageView
        android:id="@+id/clickedPic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/cameraButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_action_name_user" />

    <TextView
        android:id="@+id/location"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_below="@id/clickedPic"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:background="@drawable/box_background"
        android:inputType="textMultiLine"
        android:text="@string/location" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/description"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:padding="10dp"
        android:layout_below="@+id/description">

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="Potholes"/>

        <RadioButton
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="Floods"/>

        <RadioButton
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="Drainage"/>

        <RadioButton
            android:id="@+id/button4"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:text="Pipe Leakage"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_box"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@+id/button4"
        android:layout_marginTop="540dp"
        android:layout_marginLeft="50dp">

        <EditText
            android:id="@+id/editDesp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/enter_feedback_"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:gravity="top"
            android:autofillHints="no" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/reportProb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="680dp"
        android:text="Report Problem"
        android:textSize="24sp" />

</RelativeLayout>
